--- a/app/src/main/res/layout/fragment_head.xml
+++ b/app/src/main/res/layout/fragment_head.xml
@@ -22,6 +22,16 @@
             android:layout_gravity="right"
             android:layout_marginRight="16dp"
             android:src="@drawable/ic_account_circle" />
+
+        <ImageView
+            android:id="@+id/landscape_mode"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="8dp"
+            android:src="@drawable/ic_landscape_mode" />
+
+
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.viewpager2.widget.ViewPager2
