--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,14 +10,19 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:descendantFocusability="blocksDescendants"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:orientation="vertical">
 
             <androidx.appcompat.widget.SearchView
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
@@ -43,7 +48,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Products"
-                    android:textColor="@color/teal_700"
+                    android:textColor="@color/main_text_color"
                     android:textSize="17dp"
                     android:textStyle="bold" />
 
@@ -70,28 +75,43 @@
                             <TextView
                                 android:layout_width="40dp"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
+                                android:layout_gravity="center_vertical|right"
+                                android:ellipsize="end"
+                                android:maxLines="1"
                                 android:padding="5dp"
                                 android:text="№"
-                                android:textColor="@color/teal_700"
+                                android:textColor="@color/main_text_color"
                                 android:textStyle="bold" />
 
                             <TextView
-                                android:layout_width="120dp"
+                                android:layout_width="150dp"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_vertical"
+                                android:ellipsize="marquee"
                                 android:padding="5dp"
+                                android:singleLine="true"
                                 android:text="Name"
-                                android:textColor="@color/teal_700"
+                                android:textColor="@color/main_text_color"
                                 android:textStyle="bold" />
 
                             <TextView
-                                android:layout_width="70dp"
+                                android:layout_width="90dp"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
+                                android:layout_gravity="right"
                                 android:padding="5dp"
                                 android:text="Total pr."
-                                android:textColor="@color/teal_700"
+                                android:textColor="@color/main_text_color"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:layout_width="90dp"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="right"
+                                android:ellipsize="end"
+                                android:maxLines="1"
+                                android:padding="5dp"
+                                android:text="Min price"
+                                android:textColor="@color/main_text_color"
                                 android:textStyle="bold" />
 
                             <TextView
@@ -102,7 +122,18 @@
                                 android:maxLines="1"
                                 android:padding="5dp"
                                 android:text="Quantity"
-                                android:textColor="@color/teal_700"
+                                android:textColor="@color/main_text_color"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:layout_width="50dp"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:ellipsize="end"
+                                android:maxLines="1"
+                                android:padding="5dp"
+                                android:text="In. %"
+                                android:textColor="@color/main_text_color"
                                 android:textStyle="bold" />
 
                             <TextView
@@ -113,26 +144,64 @@
                                 android:maxLines="1"
                                 android:padding="5dp"
                                 android:text="Manufacturer"
-                                android:textColor="@color/teal_700"
+                                android:textColor="@color/main_text_color"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:layout_width="70dp"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:ellipsize="end"
+                                android:maxLines="1"
+                                android:padding="5dp"
+                                android:text="G. q"
+                                android:textColor="@color/main_text_color"
                                 android:textStyle="bold" />
 
                             <TextView
                                 android:layout_width="50dp"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
+                                android:layout_gravity="center"
                                 android:ellipsize="end"
                                 android:maxLines="1"
                                 android:padding="5dp"
-                                android:text="G. q"
-                                android:textColor="@color/teal_700"
+                                android:text="G. %"
+                                android:textColor="@color/main_text_color"
                                 android:textStyle="bold" />
+
+                            <TextView
+                                android:layout_width="90dp"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="right"
+                                android:ellipsize="end"
+                                android:maxLines="1"
+                                android:padding="5dp"
+                                android:text="G price"
+                                android:textColor="@color/main_text_color"
+                                android:textStyle="bold" />
+
+                            <CheckBox
+                                android:layout_width="30sp"
+                                android:layout_height="30sp"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="8dp"
+                                android:gravity="center"
+                                android:padding="0dp"
+                                android:visibility="gone" />
+
                         </TableRow>
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="3dp"
-                            android:background="@color/teal_700" />
+                            android:background="@color/main_text_color" />
                     </TableLayout>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_product"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
                 </LinearLayout>
             </HorizontalScrollView>
