--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -35,12 +35,12 @@
                 app:iconifiedByDefault="false"
                 app:queryHint="Search product" />
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:baselineAligned="false"
-                android:orientation="horizontal"
+                android:gravity="center_vertical"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp">
 
@@ -52,7 +52,16 @@
                     android:textSize="17dp"
                     android:textStyle="bold" />
 
-            </LinearLayout>
+                <ImageView
+                    android:id="@+id/add_product"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:src="@drawable/ic_add_btn"
+                    app:tint="@color/main_text_color" />
+
+
+            </RelativeLayout>
 
             <HorizontalScrollView
                 android:layout_width="match_parent"
@@ -179,6 +188,10 @@
                                 android:text="G price"
                                 android:textColor="@color/main_text_color"
                                 android:textStyle="bold" />
+
+                            <LinearLayout
+                                android:layout_width="32dp"
+                                android:layout_height="wrap_content" />
 
                             <CheckBox
                                 android:layout_width="30sp"
