--- a/app/src/main/res/layout/item_rv_table.xml
+++ b/app/src/main/res/layout/item_rv_table.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -114,6 +115,15 @@
             android:padding="5dp"
             android:textColor="@color/main_text_color"
             android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/edit"
+            android:layout_marginLeft="8dp"
+            android:layout_width="24dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_edit_pencil"
+            app:tint="@color/main_text_color" />
 
         <CheckBox
             android:layout_width="30sp"
