--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -75,16 +75,22 @@
                     android:paddingLeft="16dp"
                     android:paddingRight="16dp">
 
-                    <TableLayout
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:gravity="center_vertical">
 
-                        <TableRow>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
 
                             <TextView
-                                android:layout_width="40dp"
+                                android:layout_width="45dp"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical|right"
+                                android:gravity="right|center_vertical"
                                 android:ellipsize="end"
                                 android:maxLines="1"
                                 android:padding="5dp"
@@ -95,7 +101,7 @@
                             <TextView
                                 android:layout_width="150dp"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
+                                android:layout_gravity="left"
                                 android:ellipsize="marquee"
                                 android:padding="5dp"
                                 android:singleLine="true"
@@ -106,7 +112,7 @@
                             <TextView
                                 android:layout_width="90dp"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="right"
+                                android:gravity="right|center_vertical"
                                 android:padding="5dp"
                                 android:text="Total pr."
                                 android:textColor="@color/main_text_color"
@@ -115,7 +121,7 @@
                             <TextView
                                 android:layout_width="90dp"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="right"
+                                android:gravity="right|center_vertical"
                                 android:ellipsize="end"
                                 android:maxLines="1"
                                 android:padding="5dp"
@@ -126,7 +132,7 @@
                             <TextView
                                 android:layout_width="70dp"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
+                               android:gravity="center"
                                 android:ellipsize="end"
                                 android:maxLines="1"
                                 android:padding="5dp"
@@ -137,7 +143,7 @@
                             <TextView
                                 android:layout_width="50dp"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
+                               android:gravity="center"
                                 android:ellipsize="end"
                                 android:maxLines="1"
                                 android:padding="5dp"
@@ -159,7 +165,7 @@
                             <TextView
                                 android:layout_width="70dp"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center"
+                                android:gravity="center"
                                 android:ellipsize="end"
                                 android:maxLines="1"
                                 android:padding="5dp"
@@ -170,7 +176,7 @@
                             <TextView
                                 android:layout_width="50dp"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center"
+                             android:gravity="center"
                                 android:ellipsize="end"
                                 android:maxLines="1"
                                 android:padding="5dp"
@@ -181,7 +187,7 @@
                             <TextView
                                 android:layout_width="90dp"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="right"
+                                android:gravity="right|center_vertical"
                                 android:ellipsize="end"
                                 android:maxLines="1"
                                 android:padding="5dp"
@@ -203,13 +209,13 @@
                                 android:padding="0dp"
                                 android:visibility="gone" />
 
-                        </TableRow>
+                        </LinearLayout>
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="3dp"
                             android:background="@color/main_text_color" />
-                    </TableLayout>
+                    </LinearLayout>
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_product"
