--- a/app/src/main/res/layout/item_rv_table.xml
+++ b/app/src/main/res/layout/item_rv_table.xml
@@ -1,138 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
-    <TableRow>
+    <TextView
+        android:id="@+id/id"
+        android:layout_width="45dp"
+        android:layout_height="wrap_content"
+        android:gravity="right|center_vertical"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:padding="5dp"
+        android:textColor="@color/main_text_color"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/id"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|right"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:padding="5dp"
-            android:textColor="@color/main_text_color"
-            android:textStyle="bold" />
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:ellipsize="marquee"
+        android:padding="5dp"
+        android:singleLine="true"
+        android:textColor="@color/main_text_color"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:ellipsize="marquee"
-            android:padding="5dp"
-            android:singleLine="true"
-            android:textColor="@color/main_text_color"
-            android:textStyle="bold" />
+    <TextView
+        android:id="@+id/total_price"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:gravity="right|center_vertical"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:padding="5dp"
+        android:textColor="@color/main_text_color"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/total_price"
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:padding="5dp"
-            android:textColor="@color/main_text_color"
-            android:textStyle="bold" />
+    <TextView
+        android:id="@+id/min_price"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:gravity="right|center_vertical"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:padding="5dp"
+        android:textColor="@color/red_color"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/min_price"
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:padding="5dp"
-            android:textColor="@color/red_color"
-            android:textStyle="bold" />
+    <TextView
+        android:id="@+id/quantity"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:padding="5dp"
+        android:textColor="@color/main_text_color"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/quantity"
-            android:layout_width="70dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:padding="5dp"
-            android:textColor="@color/main_text_color"
-            android:textStyle="bold" />
+    <TextView
+        android:id="@+id/interest_percent"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:padding="5dp"
+        android:textColor="@color/main_text_color"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/interest_percent"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:padding="5dp"
-            android:textColor="@color/main_text_color"
-            android:textStyle="bold" />
+    <TextView
+        android:id="@+id/manufacturer"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:padding="5dp"
+        android:textColor="@color/main_text_color"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/manufacturer"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:padding="5dp"
-            android:textColor="@color/main_text_color"
-            android:textStyle="bold" />
+    <TextView
+        android:id="@+id/gift_quantity"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+       android:gravity="center"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:padding="5dp"
+        android:textColor="@color/main_text_color"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/gift_quantity"
-            android:layout_width="70dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:padding="5dp"
-            android:textColor="@color/main_text_color"
-            android:textStyle="bold" />
+    <TextView
+        android:id="@+id/gift_percent"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+     android:gravity="center"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:padding="5dp"
+        android:textColor="@color/main_text_color"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/gift_percent"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:padding="5dp"
-            android:textColor="@color/main_text_color"
-            android:textStyle="bold" />
+    <TextView
+        android:id="@+id/gift_price"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:gravity="right|center_vertical"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:padding="5dp"
+        android:textColor="@color/main_text_color"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/gift_price"
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:padding="5dp"
-            android:textColor="@color/main_text_color"
-            android:textStyle="bold" />
+    <ImageView
+        android:id="@+id/edit"
+        android:layout_width="24dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="16dp"
+        android:src="@drawable/ic_edit_pencil"
+        app:tint="@color/main_text_color" />
 
-        <ImageView
-            android:id="@+id/edit"
-            android:layout_marginLeft="16dp"
-            android:layout_width="24dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_edit_pencil"
-            app:tint="@color/main_text_color" />
-
-        <CheckBox
-            android:layout_width="30sp"
-            android:layout_height="30sp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="8dp"
-            android:buttonTint="@color/main_text_color"
-            android:gravity="center"
-            android:padding="0dp"
-     />
-    </TableRow>
-</TableLayout>
+    <CheckBox
+        android:layout_width="30sp"
+        android:layout_height="30sp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="8dp"
+        android:buttonTint="@color/main_text_color"
+        android:gravity="center"
+        android:padding="0dp" />
+</LinearLayout>
