--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="main_text_color">@color/teal_700</color>
     <color name="red_color">#C3291D</color>
+    <color name="gray_1x">#A8A8A8</color>
 </resources>
